Fix component display on small screens

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
-body {
+* {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
   background-color: #333333;
   color: #f4f4f4;
   font-family: 'Inter', sans-serif;
@@ -22,22 +27,29 @@ body {
   font-size: calc(2rem + var(--index) * 2.5);
   font-weight: 900;
   text-align: center;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
 }
 
 .status {
   font-size: 2rem;
   font-weight: 900;
   text-align: center;
-  margin: 2rem 0;
+  margin-bottom: 1rem;
 }
 
 .board {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
-  width: calc(300px + var(--index) * 2.5);
-  height: calc(300px + var(--index) * 2.5);
+  width: calc(300px + var(--index) * 1.5);
+  height: calc(300px + var(--index) * 1.5);
+}
+
+@media (max-width: 600px) {
+  .gameboard {
+    margin-right: 30px;
+    margin-top: 10px;
+  }
 }
 
 .gameboard {
@@ -60,11 +72,11 @@ body {
   background-color: #f4f1f1;
   border: none;
   font-weight: 700;
-  font-size: 1.2rem;
+  font-size: calc(1rem + var(--index) * 0.5);
   color: rgb(56, 56, 56);
   padding: 15px 32px;
   display: inline-block;
-  margin: 10px 0px;
+  margin: 10px 0;
   cursor: pointer;
   border-radius: 5px;
   box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
